# referral-assignment

./: .env.example  .gitignore  README.md  pyproject.toml  referral-assignment-strategy.md  requirements.txt  run.py  test_extraction.py
implementations/: deploy.sh  move_to_prod.md  plan.md  ringcentral_fax_api_python_strategy.md  startup.sh  twilio_sms_reminders_YN_strategy.md
implementations/llm-extract/: QUICKSTART.md  field_list.csv  filemaker_extraction_implementation.py  filemaker_extraction_prompt.py  filemaker_field_mapping.md  filemaker_implementation_guide.md
scripts/: load_reference_data.py
src/referral_crm/: __init__.py  cli.py  config.py
src/referral_crm/api/: __init__.py  main.py
src/referral_crm/automations/: __init__.py  batch_processor.py  email_ingestion.py
src/referral_crm/models/: __init__.py  base.py  dimensions.py  email.py  enums.py  queue.py  referral.py
src/referral_crm/services/: __init__.py  email_service.py  extraction_fields.py  extraction_service.py  filemaker_conversion.py  line_item_service.py  provider_service.py  reasoning_service.py  reference_data.py  referral_service.py  storage_service.py  workflow_service.py
src/referral_crm/templates/: intake_queue.html  review.html
