[project]
name = "referral-crm"
version = "0.1.0"
description = "Workers' Compensation Referral Assignment CRM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "python-dotenv>=1.0",
    "rich>=13.0",
    "typer>=0.9",
    "httpx>=0.27",
    "msal>=1.26",
    "anthropic>=0.18",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.109",
    "uvicorn>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19",
    "pypdf>=4.0",
    "pytesseract>=0.3",
    "pillow>=10.0",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "black>=24.0",
    "ruff>=0.2",
]

[project.scripts]
referral-crm = "referral_crm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/referral_crm"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]
